--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Playground</title>
+    
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="img/logo.png" alt="">
+    </header>
     <main>
-        <h1>Cat Page</h1>
+        <h1 style="background-color:rgb(84, 122, 13);">Cat Page</h1>
         <details open>
                 <summary>Beauxbatons Academy of Magic</summary>
                 <p>
@@ -44,9 +50,9 @@
       <hr>
       <br>
       <h2>My Cat Table</h2>
-      <table>
+      <table class="thick-green-border">
           <tr>
-              <td>001</td>
+              <td id="special-cell">001</td>
               <td>002</td>
               <td>003</td>
               <td>004</td>
