--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <img src="img/logo.png" alt="">
+        <img src="img/svg-w3c-h.svg" alt="">
     </header>
     <main>
         <h1 style="background-color:rgb(84, 122, 13);">Cat Page</h1>
