--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
         <img src="img/logo.png" alt="">
         <img src="img/svg-w3c-h.svg" alt="">
+        <img src="img/W3_Logo_RGB_2.png" alt="">
     </header>
     <main>
         <h1 style="background-color:rgb(84, 122, 13);">Cat Page</h1>
