Flexbox Holy Grail

--- a/flex.html
+++ b/flex.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="styles/flex.css">
 </head>
 <body>
-    <div class="m-container">
-        <div class="cl1 children"></div>
-        <div class="cl2 children"></div>
-        <div class="cl3 children"></div>
-        <div class="cl4 children"></div>
-        <div class="cl5 children"></div>
-        <div class="cl6 children"></div>
+    <div>
+        <div class="m-container">
+                <div class="cl1 children"></div>
+                <div class="cl2 children"></div>
+                <div class="cl3 children"></div>
+                <div class="cl4 children"></div>
+                <div class="cl5 children"></div>
+                <div class="cl6 children"></div>
+            </div>
     </div>
+
 </body>
 </html>
