--- a/grid.html
+++ b/grid.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="item1">header</div>
-        <div class="item2">adverti</div>
-        <div class="item3">content</div>
+        <div class="item1"><header>header</header></div>
+        <div class="item2"><div class="ad">adverti</div></div>
+        <div class="item3"><main>content</main></div>
         <div class="sidebar">Sidebar</div>
         <div class="item4">footer</div>
       </div>
