--- a/boot.html
+++ b/boot.html
@@ -7,67 +7,32 @@
     <title>Bootstrap</title>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="styles/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/customboot.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col">
-                <div class="myclass text-center" id="myid01"><header>My Header</header></div>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-2">
-                <div class="myclass" id="myid1"><div class="myad">Some Ad</div></div>
-            </div>
-            <div class="col-8">
-                <div class="myclass" id="myid2"><main class="mymain">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla animi magnam repellendus tempora! Nulla repudiandae facere placeat, maiores, cumque delectus perferendis mollitia dolores et eos in ex esse quia aliquam.</main></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1 col-md-2">
-                <div class="myclass" id="myid21">Lorem</div>
-            </div>
-            <div class="col-3 col-md-2">
-                <div class="myclass" id="myid22">Lorem</div>
-            </div>
-            <div class="col-6 col-md-4">
-                <div class="myclass" id="myid23">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sint dolorum quidem deleniti voluptatem, ab impedit consectetur tempore dignissimos. Expedita dolores aut esse obcaecati magnam. Adipisci magnam mollitia eaque est.</div>
-            </div>
-            <div class="col-2 col-md-4">
-                <div class="myclass" id="myid24">Lorem</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-3">
-                <div class="myclass" id="myid31">3333333</div>
-            </div>
-            <div class="col">
-                <div class="myclass" id="myid32">11111111</div>
-            </div>
-            <div class="col-2">
-                <div class="myclass" id="myid33">flexcol</div>
-            </div>
-            <div class="col">
-                <div class="myclass" id="myid34">2ndflexcol</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="myclass" id="myid41">flex</div>
-            </div>
-            <div class="col">
-                <div class="myclass" id="myid42">flex</div>
-            </div>
-            <div class="col">
-                <div class="myclass" id="myid43">flex</div>
-            </div>
-            <div class="col">
-                <div class="myclass" id="myid44">flex</div>
-            </div>
-        </div>
-    </div>
-  
+        <div class="alert alert-primary my-alert" role="alert">
+                A simple primary alert—check it out!
+              </div>
+              <div class="alert alert-secondary" role="alert">
+                A simple secondary alert—check it out!
+              </div>
+              <div class="alert alert-success" role="alert">
+                A simple success alert—check it out!
+              </div>
+              <div class="alert alert-danger" role="alert">
+                A simple danger alert—check it out!
+              </div>
+              <div class="alert alert-warning" role="alert">
+                A simple warning alert—check it out!
+              </div>
+              <div class="alert alert-info" role="alert">
+                A simple info alert—check it out!
+              </div>
+              <div class="alert alert-light" role="alert">
+                A simple light alert—check it out!
+              </div>
+              <div class="alert alert-dark" role="alert">
+                A simple dark alert—check it out!
+              </div>
 </body>
 </html>
