--- a/music.html
+++ b/music.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music Objects</title>
     <script src="scripts/music.js" defer></script>
+    <!-- For https://learn.freecodecamp.org/javascript-algorithms-and-data-structures/basic-javascript/record-collection -->
 </head>
 <body>
     <h1>My Header should be gone</h1>
