Added domore script

--- a/music.html
+++ b/music.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music Objects</title>
     <script src="scripts/music.js" defer></script>
+    <script src="scripts/domore.js" defer></script>
+
+    <!-- <script src="scripts/music.js" defer></script> -->
     <!-- For https://learn.freecodecamp.org/javascript-algorithms-and-data-structures/basic-javascript/record-collection -->
 </head>
 <body>
     <h1>My Header should be gone</h1>
+    
 </body>
 </html>
