--- a/fetch.html
+++ b/fetch.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Fetching some data</h1>
+    <input placeholder="Enter max number of results" id="maxvalues" value="150"></input>
     <main>
-        
+
     </main>
 </body>
 </html>
